--- a/ShellConfig.cfg
+++ b/ShellConfig.cfg
@@ -3,6 +3,7 @@ source /etc/skel/cshrc-DEFAULT
 #setenv TZ CST6CDT
 #setenv ADE_SITE ade_fusion_blr
 #setenv ADE_SITE ade_fusion_den
+#setenv ADE_SITE ade_fusion_slc
 
 setenv ADE_DEFAULT_VIEW_STORAGE_LOC /scratch
 setenv ADE_SITE ade_fusion_hyd
